[gd_scene load_steps=21 format=3 uid="uid://dwh4vaq8esl1w"]

[ext_resource type="Script" uid="uid://c6p3o8fitt0i3" path="res://Entities/Player/player.gd" id="1_xjlfs"]
[ext_resource type="Shader" uid="uid://bfnnumd2it218" path="res://Materials/heat_distortion.gdshader" id="3_hwwuc"]
[ext_resource type="Script" uid="uid://b6jqybwtjuley" path="res://Entities/Player/heat_post_f.gd" id="4_1ke2e"]
[ext_resource type="PackedScene" uid="uid://ccs7v6xa4f6xc" path="res://Entities/Player/tools/grapple.tscn" id="4_7a1se"]
[ext_resource type="PackedScene" uid="uid://b2uneexq7ttw7" path="res://Entities/Player/tools/swing.tscn" id="5_lub02"]
[ext_resource type="Texture2D" uid="uid://dgehn67uyfvuv" path="res://addons/kenney_particle_pack/star_07.png" id="6_6adbs"]
[ext_resource type="PackedScene" uid="uid://br7l5m45107l2" path="res://Entities/Player/tools/dissolver.tscn" id="6_x1y6q"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n3m37"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xjlfs"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0uqvl"]
frequency = 0.0029

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bbsn4"]
noise = SubResource("FastNoiseLite_0uqvl")
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_smb38"]
shader = ExtResource("3_hwwuc")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_bbsn4")
shader_parameter/time = 17.31500000000233
shader_parameter/distortion_strength = 0.00400000019
shader_parameter/distortion_speed = 0.2310000109725

[sub_resource type="Animation" id="Animation_g2faj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xjlfs"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0837758, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vb8cd"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0837758, 0, 0)]
}

[sub_resource type="Animation" id="Animation_aha4f"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0529841, 0, 0), Vector3(0.450295, 0, 0), Vector3(-0.0529841, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vb8cd"]
_data = {
&"RESET": SubResource("Animation_g2faj"),
&"idle": SubResource("Animation_xjlfs"),
&"move": SubResource("Animation_vb8cd"),
&"shoot": SubResource("Animation_aha4f")
}

[sub_resource type="Gradient" id="Gradient_5vp2d"]
offsets = PackedFloat32Array(0.29464287, 0.73214287, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qwtga"]
gradient = SubResource("Gradient_5vp2d")
width = 11
height = 11
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hwwuc"]
height = 25.018677

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("current_tool") groups=["player"]]
collision_layer = 2
slide_on_ceiling = false
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_block_on_wall = false
script = ExtResource("1_xjlfs")
current_tool = NodePath("Camera3D/MainHand/Grapple")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_n3m37")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_xjlfs")

[node name="HeatPostFX" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_smb38")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_1ke2e")

[node name="Timer" type="Timer" parent="HeatPostFX"]
wait_time = 0.1
autostart = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29691, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00161541, -0.00206697, 0.0244083)
target_position = Vector3(0, 0, -50)

[node name="MainHand" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.382142, -0.29827404, -0.151892)

[node name="Grapple" parent="Camera3D/MainHand" instance=ExtResource("4_7a1se")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.034788996, -0.029127777, -0.288543)
visible = true

[node name="Swing" parent="Camera3D/MainHand" instance=ExtResource("5_lub02")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.034788996, -0.029127777, -0.288543)

[node name="Dissolver" parent="Camera3D/MainHand" instance=ExtResource("6_x1y6q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.029478937, -0.029127777, -0.288543)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_vb8cd")
}
blend_times = [&"RESET", &"RESET", 0.2, &"RESET", &"idle", 0.2, &"RESET", &"move", 0.2, &"RESET", &"shoot", 0.2]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("6_6adbs")
expand_mode = 1

[node name="JumpIcons" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 49.0
offset_top = -16.0
offset_right = 70.0
offset_bottom = 57.0
alignment = 1

[node name="JumpIcon" type="TextureRect" parent="Control/JumpIcons"]
layout_mode = 2
texture = SubResource("GradientTexture2D_qwtga")
stretch_mode = 3

[node name="SpeedLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = -31.0
offset_top = 92.0
offset_right = 71.0
offset_bottom = 115.0
text = "999"
horizontal_alignment = 1

[node name="TempSpeedLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = -31.0
offset_top = 69.0
offset_right = 71.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 20
text = "999"
horizontal_alignment = 1

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0966891, 0)
visible = false
light_energy = 8.412
light_size = 0.664
shadow_enabled = true
omni_range = 246.94206
metadata/_edit_group_ = true

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 128
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.502079, 0)
shape = SubResource("CapsuleShape3D_hwwuc")

[connection signal="timeout" from="HeatPostFX/Timer" to="HeatPostFX" method="_on_timer_timeout"]
[connection signal="animation_finished" from="Camera3D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
